# puniyu-plugin-template-rust

./: Cargo.toml  LICENSE  README.md
.github/: renovate.json
src/: command.rs  lib.rs
